--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
 ext {
     retrofitVersion = '2.4.0'
     arch_version = '1.1.1'
-    dagger_version = '2.11'
+    dagger_version = '2.24'
 
 
 }
@@ -54,7 +54,13 @@ dependencies {
 
     //dagger
     implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    kaptTest "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+
+
 
     //rxjava
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
